fixed the alignment of the text

--- a/src/Styles/Scss/_mixins.scss
+++ b/src/Styles/Scss/_mixins.scss
@@ -38,7 +38,7 @@
 }
 
 @mixin makeFontSmoth($size, $color) {
-    text-shadow: 0 0 0.054rem $color;
+    text-shadow: 0 0 0.059rem $color;
     color: transparent;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
